--- a/letmeask/src/styles/room.scss
+++ b/letmeask/src/styles/room.scss
@@ -13,6 +13,15 @@
       > img {
         max-height: 45px;
       }
+
+      > div {
+        display: flex;
+        gap: 16px;
+      }
+
+      button {
+        height: 40px;
+      }
     }
   }
 
@@ -49,7 +58,7 @@
         padding: 16px;
         border-radius: 8px;
         background: #fefefe;
-        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.84);
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.10);
         resize: vertical;
         min-height: 130px;
       }
@@ -95,6 +104,9 @@
         }
       }
     }
-  }
 
+    .question-list {
+      margin-top: 32px;
+    }
+  }
 }
